--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,8 +16,14 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:weightSum="2"
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
             <TextView
                 android:id="@+id/userName_home"
@@ -29,19 +35,38 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:textSize="@dimen/_13sdp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/farmId_home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_35sdp"
+                    android:textColor="@color/white"
+                    android:textAllCaps="false"
+                    android:backgroundTint="@color/yellow"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/farmid"
+                    android:drawableRight="@drawable/baseline_keyboard_arrow_down_24" />
+                </LinearLayout>
+                </LinearLayout>
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:gravity="right"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/btnAddExpense"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:gravity="center"
+                android:layout_height="@dimen/_35sdp"
                 android:backgroundTint="@color/yellow"
                 android:layout_marginLeft="10dp"
                 android:text="@string/add"
-                android:layout_gravity="right"
+                android:layout_gravity="center"
                 android:layout_marginRight="15dp" />
             </LinearLayout>
 
@@ -107,7 +132,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Farm List"
+                            android:text="All Batches"
                             android:textStyle="bold"
                             android:layout_marginTop="@dimen/_30sdp"
                             android:gravity="center"/>
@@ -124,7 +149,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_10sdp"
                                 android:background="@color/yellow"
-                                android:text="Show List" />
+                                android:text="Show Batch" />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
