--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -148,7 +148,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 app:cardCornerRadius="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_100sdp"
                 app:cardElevation="@dimen/_5sdp"
                 android:layout_height="wrap_content">
                 <LinearLayout
@@ -158,11 +158,29 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Order"
+                        android:text="My Setting"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:textStyle="bold"
                         android:padding="@dimen/_5sdp"
                         android:textColor="@color/black"/>
+                    <TextView
+                        android:id="@+id/farmList_setting"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/baseline_settings_24"
+                        android:text="Farm List"
+                        android:drawableRight="@drawable/baseline_arrow_right_24"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:textStyle="bold"
+                        android:padding="@dimen/_5sdp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_marginLeft="@dimen/_15sdp"
+                        android:background="@color/yellow"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -246,11 +264,28 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_1sdp"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:layout_marginBottom="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_marginLeft="@dimen/_15sdp"
                         android:background="@color/yellow"/>
 
+                    <TextView
+                        android:id="@+id/logout_link_setting"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Logout"
+                        android:drawableRight="@drawable/baseline_arrow_right_24"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:textStyle="bold"
+                        android:padding="@dimen/_5sdp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_marginLeft="@dimen/_15sdp"
+                        android:background="@color/yellow"/>
 
                 </LinearLayout>
 
