--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -24,8 +24,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:textColor="@color/black"
                 android:drawableLeft="@drawable/baseline_arrow_right_24"
-                android:textStyle="bold"
-                android:textSize="@dimen/_15sdp"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,18 +39,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Hello"
-                        android:textSize="@dimen/_15sdp"
                         android:layout_marginTop="@dimen/_8sdp"
                         android:textColor="@color/black"
                         android:layout_marginLeft="@dimen/_20sdp"/>
                     <TextView
+                        android:id="@+id/username_setting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Ameesha"
                         android:layout_marginLeft="@dimen/_5sdp"
-                        android:textSize="@dimen/_13sdp"
                         android:layout_marginTop="@dimen/_8sdp"
-                        android:textStyle="bold"
                         android:textColor="@color/black"/>
 
 
