--- a/app/src/main/res/layout/activity_farm_add.xml
+++ b/app/src/main/res/layout/activity_farm_add.xml
@@ -49,6 +49,28 @@
             android:hint="Enter Farm Name"
             android:inputType="text" />
         </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mobile Number"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:paddingTop="8dp"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_10sdp">
+            <EditText
+                android:id="@+id/mobile_addFarm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:padding="@dimen/_10sdp"
+                android:hint="Enter mobile no"
+                android:inputType="text" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
