--- a/app/src/main/res/layout/activity_farm_list.xml
+++ b/app/src/main/res/layout/activity_farm_list.xml
@@ -14,15 +14,34 @@
             android:layout_width="match_parent"
             app:cardBackgroundColor="@color/yellow"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Farm List"
                 android:padding="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_100sdp"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13sdp"
                 android:layout_gravity="center"
                 android:paddingBottom="@dimen/_10sdp"/>
+                <Button
+                    android:id="@+id/btnAddExpense"
+                    android:layout_width="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:backgroundTint="@color/green"
+                    android:drawableLeft="@drawable/baseline_add_24"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/add"
+                    android:layout_gravity="center" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
