--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
+            app:cardBackgroundColor="@color/yellow"
             app:cardElevation="@dimen/_5sdp"
             android:layout_height="wrap_content">
         <LinearLayout
@@ -33,8 +34,7 @@
                 android:text="@string/user"
                 android:textColor="@color/black"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:textSize="@dimen/_13sdp" />
+                android:textStyle="bold"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -42,13 +42,15 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/farmId_home"
                     android:layout_width="wrap_content"
+                    android:padding="@dimen/_5sdp"
                     android:layout_height="@dimen/_35sdp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/green"
                     android:textAllCaps="false"
-                    android:backgroundTint="@color/yellow"
+                    android:background="@color/white"
+                    android:visibility="visible"
                     android:layout_marginLeft="10dp"
-                    android:text="@string/farmid"
-                    android:drawableRight="@drawable/baseline_keyboard_arrow_down_24" />
+                    android:text="Select Farm"
+                    android:drawableRight="@drawable/baseline_keyboard_arrow_down_24_green" />
                 </LinearLayout>
                 </LinearLayout>
             <LinearLayout
@@ -58,16 +60,7 @@
                 android:layout_gravity="center"
                 android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btnAddExpense"
-                android:layout_width="wrap_content"
-                android:gravity="center"
-                android:layout_height="@dimen/_35sdp"
-                android:backgroundTint="@color/yellow"
-                android:layout_marginLeft="10dp"
-                android:text="@string/add"
-                android:layout_gravity="center"
-                android:layout_marginRight="15dp" />
+
             </LinearLayout>
 
         </LinearLayout>
@@ -77,16 +70,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:weightSum="3"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/add_record_card"
                     android:layout_width="0dp"
+                    app:cardBackgroundColor="@color/sky_blue"
                     android:layout_marginLeft="@dimen/_5sdp"
                     app:cardCornerRadius="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_weight="1"
-                    android:layout_height="@dimen/_100sdp"
+                    android:layout_height="@dimen/_80sdp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -96,6 +91,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Daily Record"
+                            android:textColor="@color/white"
                             android:textStyle="bold"
                             android:layout_marginTop="@dimen/_30sdp"
                             android:gravity="center"/>
@@ -104,26 +100,21 @@
                             android:layout_gravity="center"
                             android:gravity="center"
                             android:layout_height="match_parent">
-                        <Button
-                            android:id="@+id/add_record"
-                            android:background="@color/yellow"
-                            android:layout_marginTop="@dimen/_10sdp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Add record"/>
                         </LinearLayout>
 
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/show_farm_list_btn_card"
                     android:layout_width="0dp"
                     android:layout_weight="1"
+                    app:cardBackgroundColor="@color/green_light"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:layout_marginRight="@dimen/_5sdp"
                     app:cardCornerRadius="@dimen/_5sdp"
-                    android:layout_height="@dimen/_100sdp"
+                    android:layout_height="@dimen/_80sdp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -133,6 +124,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="All Batches"
+                            android:textColor="@color/white"
                             android:textStyle="bold"
                             android:layout_marginTop="@dimen/_30sdp"
                             android:gravity="center"/>
@@ -143,23 +135,18 @@
                             android:layout_gravity="center"
                             android:gravity="center">
 
-                            <Button
-                                android:id="@+id/show_farm_list_btn"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/_10sdp"
-                                android:background="@color/yellow"
-                                android:text="Show Batch" />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/add_batch_home_card"
                     android:layout_width="0dp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_weight="1"
                     android:layout_marginRight="@dimen/_5sdp"
                     app:cardCornerRadius="@dimen/_5sdp"
-                    android:layout_height="@dimen/_100sdp"
+                    app:cardBackgroundColor="@color/lavander"
+                    android:layout_height="@dimen/_80sdp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -170,6 +157,7 @@
                             android:layout_height="wrap_content"
                             android:text="New Batch"
                             android:textStyle="bold"
+                            android:textColor="@color/white"
                             android:layout_marginTop="@dimen/_30sdp"
                             android:gravity="center"/>
                         <LinearLayout
@@ -177,20 +165,207 @@
                             android:layout_gravity="center"
                             android:gravity="center"
                             android:layout_height="match_parent">
-                            <Button
-                                android:id="@+id/add_batch_home"
-                                android:background="@color/yellow"
-                                android:layout_marginTop="@dimen/_10sdp"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Add Batch"/>
                         </LinearLayout>
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:weightSum="2"
+    android:layout_marginTop="@dimen/_5sdp"
+    android:orientation="horizontal">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/fcr_home_card"
+        android:layout_width="0dp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:layout_weight="1"
+        app:cardElevation="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginRight="@dimen/_5sdp"
+        app:cardCornerRadius="@dimen/_5sdp"
+        android:layout_height="@dimen/_80sdp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:background="@color/purple"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/fCR_per_kg_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0.0"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_height="match_parent">
+                <Button
+                    android:backgroundTint="@color/purple"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Feed Conversion Ratio"/>
+            </LinearLayout>
 
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cost_per_kghome_card"
+        android:layout_width="0dp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        app:cardElevation="@dimen/_5sdp"
+        android:layout_weight="1"
+        android:layout_marginRight="@dimen/_5sdp"
+        app:cardCornerRadius="@dimen/_5sdp"
+        android:layout_height="@dimen/_80sdp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:background="@color/green"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/cpg_per_kg_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0.0"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_height="match_parent">
+                <Button
+                    android:id="@+id/cpk_batch_home"
+                    android:backgroundTint="@color/green"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cost Per Kg"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            app:cardElevation="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:background="@drawable/gradient_golden"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Current Rate"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:textStyle="bold"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+                <TextView
+                    android:id="@+id/rate_per_kg_home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0.0"
+                    android:textColor="@color/purple"
+                    android:textSize="@dimen/_15sdp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textStyle="bold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="per kg"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_gravity="center"
+                        android:textColor="@color/purple"
+                        android:gravity="center"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:gravity="right">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="bottom"
+                    android:text="Sell"
+                    android:padding="@dimen/_5sdp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:background="@drawable/gradient_third_color"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_150sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            app:cardBackgroundColor="@color/blue_sky"
+            android:layout_marginRight="@dimen/_5sdp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Current History"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:textStyle="bold"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:gravity="right">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:padding="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="Check History"
+                    android:textColor="@color/white"
+                    android:background="@drawable/gradient_third_color"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
 
