--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,5 +39,13 @@
         android:src="@drawable/baseline_settings_24"
         app:fabSize="mini"
         app:maxImageSize="20dp" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/msgimg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        android:layout_margin="@dimen/_16sdp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
