--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -37,8 +37,6 @@
             android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>>
-<<<<<<< HEAD
-=======
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,9 +58,7 @@
             android:textColorHint="@color/black"
             android:layout_height="wrap_content"/>
 
-    </com.google.android.material.textfield.TextInputLayout>>
-
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 
@@ -78,11 +74,7 @@
         app:boxBackgroundColor="#FAFAFA"
         app:hintTextColor="@color/black"
         app:boxStrokeColor="@color/black"
-<<<<<<< HEAD
-        android:hint="Purchase ">
-=======
         android:hint="Rate">
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -92,8 +84,6 @@
             android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
-<<<<<<< HEAD
-=======
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -118,7 +108,7 @@
             android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
