--- a/app/src/main/res/layout/activity_massage.xml
+++ b/app/src/main/res/layout/activity_massage.xml
@@ -1,70 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/msgbg"
-    tools:context=".MassageActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/main"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@drawable/bgplan"
+	tools:context=".MassageActivity">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editTextMessage"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:layout_marginTop="16dp"
-            android:textColor="@color/white"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/white"
-            android:textSize="@dimen/_10sdp"
-            android:hint="Type your message here" />
+		<androidx.cardview.widget.CardView
+			android:id="@+id/layout_group_chat"
+			android:layout_width="match_parent"
+			android:orientation="vertical"
+			app:layout_constraintTop_toTopOf="parent"
+			android:layout_height="wrap_content">
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Talk to Us"
+					android:textStyle="bold"
+					android:padding="@dimen/_15sdp"
+					android:drawablePadding="@dimen/_5sdp"
+					android:drawableLeft="@drawable/baseline_person_24"/>
+				<ImageView
+					android:id="@+id/info_msg"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="right"
+					android:layout_marginTop="@dimen/_10sdp"
+					android:layout_marginRight="@dimen/_10sdp"
+					android:src="@drawable/baseline_more_vert_24_black"/>
+		</androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/btnSendMessage"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Send Message"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginTop="16dp"/>
-        </LinearLayout>
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Talk to Us"
-                android:textStyle="bold"
-                android:padding="@dimen/_10sdp"
-                android:drawablePadding="@dimen/_5sdp"
-                android:drawableLeft="@drawable/baseline_person_24"/>
-            <ImageView
-                android:id="@+id/info_msg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:src="@drawable/baseline_more_vert_24_black"/>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/recycler_gchat"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginBottom="16dp"
+		app:layout_constrainedHeight="true"
+		app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
+		app:layout_constraintTop_toBottomOf="@+id/layout_group_chat" />
 
-</RelativeLayout>
+	<TextView
+		android:id="@+id/text_gchat_indicator"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:visibility="gone"
+		app:layout_constraintBottom_toTopOf="@id/view"
+		app:layout_constraintStart_toStartOf="parent" />
+
+	<View
+		android:id="@+id/view"
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:background="#e0e0e0"
+		app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />
+
+	<RelativeLayout
+		android:id="@+id/layout_gchat_chatbox"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent">
+
+
+		<EditText
+			android:layout_marginStart="16dp"
+			android:id="@+id/edit_gchat_message"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_centerVertical="true"
+			android:layout_toStartOf="@+id/button_gchat_send"
+			android:background="@android:color/transparent"
+			android:hint="Enter Message"
+			android:inputType="text"
+			android:maxLines="6"
+			tools:ignore="Autofill" />
+
+		<Button
+			android:id="@+id/button_gchat_send"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentEnd="true"
+			android:text="Send"
+			android:backgroundTint="@color/yellow" />
+
+	</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
