--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -30,110 +30,236 @@
             android:layout_marginTop="20dp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
-        <EditText
-            android:id="@+id/user_name_regi"
+        <!-- Name Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter name"
-            android:textColorHint="#808080"
-            android:backgroundTint="#808080"
-            android:drawablePadding="5dp"
-            android:textColor="@color/black"
-            android:drawableLeft="@drawable/baseline_person_24_yellow"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/mobile_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_person_24_yellow"
+                android:contentDescription="Person Icon" />
+
+            <EditText
+                android:id="@+id/user_name_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter name"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName"/>
+        </LinearLayout>
+
+        <!-- Mobile Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter mobile"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_call_24"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/email_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_call_24"
+                android:contentDescription="Phone Icon" />
+
+            <EditText
+                android:id="@+id/mobile_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter mobile"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="phone"/>
+        </LinearLayout>
+
+        <!-- Email Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter email id"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_alternate_email_24"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/address_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_alternate_email_24"
+                android:contentDescription="Email Icon" />
+
+            <EditText
+                android:id="@+id/email_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter email id"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"/>
+        </LinearLayout>
+
+        <!-- Address Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter address"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_location_on_24"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/area_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_location_on_24"
+                android:contentDescription="Location Icon" />
+
+            <EditText
+                android:id="@+id/address_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter address"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="textPostalAddress"/>
+        </LinearLayout>
+
+        <!-- Area Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Area"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_location_on_24"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/city_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_location_on_24"
+                android:contentDescription="Location Icon" />
+
+            <EditText
+                android:id="@+id/area_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter Area"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="text"/>
+        </LinearLayout>
+
+        <!-- City Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter city"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_location_on_24"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/date_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_location_on_24"
+                android:contentDescription="Location Icon" />
+
+            <EditText
+                android:id="@+id/city_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter city"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="text"/>
+        </LinearLayout>
+
+        <!-- Date Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter date"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_location_on_24"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
-        <EditText
-            android:id="@+id/password_regi"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:tint="@color/yellow"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_location_on_24"
+                android:contentDescription="Date Icon" />
+
+            <EditText
+                android:id="@+id/date_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter date"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionNext"
+                android:inputType="date"/>
+        </LinearLayout>
+
+        <!-- Password Field -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter password"
-            android:textColorHint="#808080"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_key_24_yellow"
-            android:backgroundTint="#808080"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:src="@drawable/baseline_key_24_yellow"
+                android:contentDescription="Key Icon" />
+
+            <EditText
+                android:id="@+id/password_regi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Enter password"
+                android:textColorHint="#808080"
+                android:textColor="@color/black"
+                android:backgroundTint="#808080"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"/>
+        </LinearLayout>
 
         <Button
             android:id="@+id/sign_up_btn"
