--- a/app/src/main/res/layout/activity_daily_record.xml
+++ b/app/src/main/res/layout/activity_daily_record.xml
@@ -14,6 +14,37 @@
             android:layout_width="match_parent"
             app:cardBackgroundColor="@color/yellow"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Day "
+                android:background="@color/grey"
+                android:padding="@dimen/_10sdp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="@dimen/_13sdp"
+                android:layout_gravity="left"
+                android:paddingBottom="@dimen/_10sdp" />
+               <!-- <View
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/black"/>-->
+            <TextView
+                android:id="@+id/day_of_record_from"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:background="@color/sky_blue"
+                android:padding="@dimen/_10sdp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13sdp"
+                android:paddingBottom="@dimen/_10sdp" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -102,12 +133,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="Feed Construction"
+            android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_5sdp"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:paddingTop="8dp" />
+            android:paddingTop="8dp"
+            android:text="Feed Constructor"
+            android:textStyle="bold" />
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,7 +151,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_10sdp"
                 android:backgroundTint="@color/white"
-                android:hint="Enter feed construction"
+                android:hint="Enter feed constructor"
                 android:inputType="numberDecimal" />
         </androidx.cardview.widget.CardView>
         <TextView
